Add publishing to GitHub Packages
- Refactor `generateJava` task to be compatible with Java 16+ projects
- Migrate to Spotless for code formatting
- Add Maven publication tasks for `molly` and `molly-gradle-plugin
- Minor language updates