@@ -1,19 +1,33 @@
 package com.vmware.pbj.molly.gradle;
 
-import com.vmware.pbj.molly.core.Language;
-import com.vmware.pbj.molly.MollyListenerInterpreter;
-import com.vmware.pbj.molly.write.MollyJavaGenerator;
 import com.vmware.pbj.molly.write.MollyJavaGeneratorConfig;
 import org.gradle.api.DefaultTask;
+import org.gradle.api.JavaVersion;
+import org.gradle.api.file.DirectoryProperty;
 import org.gradle.api.file.RegularFileProperty;
 import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.*;
+import org.gradle.internal.jvm.Jvm;
+import org.gradle.workers.WorkerExecutor;
 
-import java.io.FileInputStream;
+import javax.inject.Inject;
 import java.io.FileNotFoundException;
-import java.io.InputStream;
+import java.util.List;
+import java.util.Objects;
 
 abstract public class GenerateJavaTask extends DefaultTask {
+
+    private static final List<String> EXTRA_JAVA16_JVM_ARGS = List.of(
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    );
+
+    @Inject
+    abstract public WorkerExecutor getWorkerExecutor();
 
     @Input
     @Optional
@@ -23,18 +37,32 @@ abstract public class GenerateJavaTask extends DefaultTask {
     abstract public RegularFileProperty getInputFile();
 
     @OutputDirectory
-    abstract public RegularFileProperty getOutputDir();
+    abstract public DirectoryProperty getOutputDir();
 
     @TaskAction
-    public void execute() throws FileNotFoundException {
-        var config = new MollyJavaGeneratorConfig.Builder();
+    public void execute() {
+        var workQueue = getWorkerExecutor().processIsolation(workerSpec -> {
+            workerSpec.forkOptions(options -> {
+                if (Objects.requireNonNull(Jvm.current().getJavaVersion())
+                    .compareTo(JavaVersion.VERSION_16) >= 0
+                ) {
+                    options.setJvmArgs(EXTRA_JAVA16_JVM_ARGS);
+                }
+            });
+        });
 
-        if (getJavaPackage().isPresent()) { config.javaPackage(getJavaPackage().get()); }
+        workQueue.submit(GenerateJavaWorkAction.class, parameters -> {
+            parameters.getGeneratorConfig().set(createConfig());
+            parameters.getInputFile().set(getInputFile());
+            parameters.getOutputDir().set(getOutputDir());
+        });
 
-        InputStream languageSource = new FileInputStream(getInputFile().get().getAsFile());
-        Language language = new MollyListenerInterpreter().read(languageSource);
-        var generator = new MollyJavaGenerator(language, config.build());
+        workQueue.await();
+    }
 
-        generator.write(getOutputDir().get().getAsFile().toPath());
+    private MollyJavaGeneratorConfig createConfig() {
+        var configBuilder = new MollyJavaGeneratorConfig.Builder();
+        if (getJavaPackage().isPresent()) { configBuilder.javaPackage(getJavaPackage().get()); }
+        return configBuilder.build();
     }
 }
